--- a/Breast_cancer.ipynb
+++ b/Breast_cancer.ipynb
@@ -96,7 +96,7 @@
     "    'host':'localhost',\n",
     "    'user':'postgres',\n",
     "    'port':5432,\n",
-    "    'password':'Reyyan2010!'\n",
+    "    'password':'R*******'\n",
     "}\n",
     "connection = psycopg2.connect(**param, dbname='database_ds')"
    ]
